[gd_scene load_steps=14 format=3 uid="uid://5nmh5bvmu542"]

[ext_resource type="Texture2D" uid="uid://ywdcoscjqndc" path="res://assest/background/hall_bg.png" id="1_dhkur"]
[ext_resource type="Script" path="res://script/hall/hallPage.gd" id="1_en4ui"]
[ext_resource type="Texture2D" uid="uid://biwravx5odov6" path="res://assest/hall/personal_btn.png" id="2_gnqaw"]
[ext_resource type="Texture2D" uid="uid://btb7y4orfls8a" path="res://assest/hall/hall_btn.png" id="3_jm50t"]
[ext_resource type="Texture2D" uid="uid://w8hge4kaevw5" path="res://assest/hall/mail_btn.png" id="4_gc38w"]
[ext_resource type="Texture2D" uid="uid://bfx27ixrohdkw" path="res://assest/hall/logout_btn.png" id="5_2vs8y"]
[ext_resource type="Texture2D" uid="uid://cgb7pmeyrmyph" path="res://assest/hall/setting_btn.png" id="6_g8q5o"]
[ext_resource type="Texture2D" uid="uid://dm1x0a7clio7c" path="res://assest/activity/activity_bg_1.png" id="7_yynet"]
[ext_resource type="Script" path="res://script/hall/HBoxContainer.gd" id="8_3yinv"]
[ext_resource type="Texture2D" uid="uid://bmo1hsje3w7na" path="res://assest/activity/activity_bg_2.png" id="8_yije2"]
[ext_resource type="Texture2D" uid="uid://bh3yqjxad60g3" path="res://assest/activity/activity_bg_3.png" id="9_ep7a8"]
[ext_resource type="Texture2D" uid="uid://cf0bu23f60hjq" path="res://assest/button/challenge_btn.png" id="12_esigw"]
[ext_resource type="FontFile" uid="uid://bglup5px3oxiu" path="res://fonts/NotoSansTC-Bold.ttf" id="13_ie1e6"]

[node name="HallPage" type="Node2D"]
script = ExtResource("1_en4ui")

[node name="BG" type="Sprite2D" parent="."]
scale = Vector2(0.498298, 0.5)
texture = ExtResource("1_dhkur")
centered = false

[node name="PersonalBtn" type="TextureButton" parent="."]
offset_left = 21.0
offset_top = 20.0
offset_right = 285.0
offset_bottom = 117.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_gnqaw")

[node name="HallBtn" type="TextureButton" parent="."]
offset_left = 176.0
offset_top = 20.0
offset_right = 440.0
offset_bottom = 117.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_jm50t")

[node name="PersonalBtn2" type="TextureButton" parent="."]
offset_left = 331.0
offset_top = 20.0
offset_right = 595.0
offset_bottom = 117.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_gnqaw")

[node name="MailBtn" type="TextureButton" parent="."]
offset_left = 896.0
offset_top = 20.0
offset_right = 992.0
offset_bottom = 116.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_gc38w")

[node name="LogoutBtn" type="TextureButton" parent="."]
offset_left = 962.0
offset_top = 20.0
offset_right = 1058.0
offset_bottom = 116.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_2vs8y")

[node name="SettingBtn" type="TextureButton" parent="."]
offset_left = 962.0
offset_top = 82.0
offset_right = 1058.0
offset_bottom = 178.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_g8q5o")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_top = 190.0
offset_right = 1025.0
offset_bottom = 449.0
script = ExtResource("8_3yinv")

[node name="Activity_1" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(20, 50)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_yynet")
centered = false

[node name="Activity_2" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(308, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_yije2")
centered = false

[node name="Activity_3" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(750, 50)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_ep7a8")
centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="AloneBtn" type="TextureButton" parent="."]
offset_left = 346.0
offset_top = 483.0
offset_right = 501.0
offset_bottom = 562.0
texture_normal = ExtResource("12_esigw")

[node name="AloneLabel" type="Label" parent="AloneBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("13_ie1e6")
theme_override_font_sizes/font_size = 24
text = "個人挑戰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TeamBtn" type="TextureButton" parent="."]
offset_left = 523.0
offset_top = 483.0
offset_right = 678.0
offset_bottom = 562.0
texture_normal = ExtResource("12_esigw")

[node name="TeamLabel" type="Label" parent="TeamBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("13_ie1e6")
theme_override_font_sizes/font_size = 24
text = "隊伍挑戰"
horizontal_alignment = 1
vertical_alignment = 1
